front-end progressing, just some details remained

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -9,7 +9,7 @@
     <title>تاپی‌سم</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/favicon-blue.png" />
+    <link rel="icon" type="image/png" href="images/favicon-multi.png" />
 
     <!-- Fonts -->
     <link href='https://cdn.fontcdn.ir/Font/Persian/Samim/Samim.css' rel='stylesheet' type='text/css'>
@@ -51,16 +51,16 @@
                     ثبت نام
                 </span>
             </button>
-            <button id="logout-btn" class="mr-auto p-2 btn btn-outline-danger login-btn ml-2" onclick="logout()"
-                style="display: none;">
-                <span class="signin-and-signup-texts">
-                    خروج
+            <button id="admin-btn" class="mr-auto p-2 btn btn-outline-custom login-btn ml-2" onclick="openAdmin()"
+                style="display: none; background-color: var(--org-blue);">
+                <span class="signin-and-signup-texts" style="color: var(--light-blue);">
+                    داشبورد
                 </span>
             </button>
-            <button id="admin-btn" class="p-2 btn btn-outline-custom login-btn ml-2" onclick="openAdmin()"
+            <button id="logout-btn" class="p-2 btn btn-outline-exit login-btn ml-2" onclick="logout()"
                 style="display: none;">
-                <span class="signin-and-signup-texts">
-                    پنل کاربری
+                <span class="exit-texts">
+                    خروج
                 </span>
             </button>
         </div>
@@ -125,9 +125,10 @@
                 </div>
                 <div class="d-flex align-items-center">
 
-                    <button onclick="closeModal()" id="go-home"
-                        class="mr-auto p-2 ml-2 text-decoration-none btn"><span>بازگشت به خانه</span> <i
-                            class="fal fa-angle-left" style="transform: scale(2); margin: 10px;"></i></button>
+                    <button onclick="closeModal()" id="go-home" class="mr-auto p-2 ml-2 text-decoration-none btn">
+                        <span>بازگشت به خانه</span>
+                        <i class="fal fa-angle-left" style="transform: scale(2); margin: 10px;"></i>
+                    </button>
                 </div>
             </nav>
 
